--- a/CardioHealth/TasksAndSteps/APHFitnessTest/Intro/APHImportantDetailsTableViewController.storyboard
+++ b/CardioHealth/TasksAndSteps/APHFitnessTest/Intro/APHImportantDetailsTableViewController.storyboard
@@ -442,7 +442,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="closeButton:" destination="WIY-rh-jol" eventType="touchUpInside" id="Dkj-yv-qgO"/>
+                                    <action selector="dismissModalView:" destination="WIY-rh-jol" eventType="touchUpInside" id="730-sa-7go"/>
                                 </connections>
                             </button>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="upQ-uf-wic">
